--- a/polls/templates/admin/polls/Mietzinseingaenge/change_list.html
+++ b/polls/templates/admin/polls/Mietzinseingaenge/change_list.html
@@ -28,8 +28,8 @@ const chart = new Chart(ctx, {
     options: {
         scales: {
             y: {
-                suggestedMin: 0,
-                suggestedMax: 100000
+                beginAtZero: true
+
             }
         }
     }
